--- a/pay.html
+++ b/pay.html
@@ -22,40 +22,28 @@
                 <ul>
                     <li><a id="aboutLink" href="aboutus.html">About</a></li>
                     <li><a id="notifLink" href="#">Notification</a></li>
-                    <li class="dropdown">
-                        <a id="userLink" href="#">User</a>
-                        <div class="dropdown-content" id="dropdown-content">
-                            <!-- Dropdown content will be populated here -->
-                        </div>
-                    </li>
+                    <li><a id="usernameLink" href="account.html">User</a></li>
                     <li><a id="accountLink"><i class="material-icons">account_circle</i></a></li>
                 </ul>
             </nav>
         </div>
 
         <script>
-            // Fetch user information and update the menu accordingly
+            // Fetch user information
             document.addEventListener('DOMContentLoaded', () => {
-                fetch('public/php/get_username.php')
+                fetch('public/php/get_user_info.php')
                     .then(response => response.json())
                     .then(data => {
-                        const userLink = document.getElementById('userLink');
-                        const dropdownContent = document.getElementById('dropdown-content');
-
-                        userLink.textContent = data.username;
-
-                        if (data.logged_in) {
-                            dropdownContent.innerHTML = `
-                                <a href="account.html">Account</a>
-                                <a href="public/php/logout.php">Logout</a>
-                            `;
+                        if (data.error) {
+                            console.error(data.error);
+                            window.location.href = 'login.php'; // Redirect in case of error
                         } else {
-                            dropdownContent.innerHTML = `
-                                <a href="login.php">Login</a>
-                            `;
+                            document.getElementById('usernameLink').textContent = data.username;
                         }
                     })
-                    .catch(error => console.error('Error fetching username:', error));
+                    .catch(error => {
+                        console.error('Error fetching login status:', error);
+                    });
             });
         </script>
 
