--- a/account.html
+++ b/account.html
@@ -117,6 +117,7 @@
                 .then(data => {
                     if (data.error) {
                         console.error(data.error);
+                        window.location.href = "login.php";
                     } else {
                         document.getElementById('usernameLink').textContent = data.username;
                         document.getElementById('usernameTitle').textContent = data.username;
@@ -127,7 +128,6 @@
                 })
                 .catch(error => {
                     console.error('Error fetching login status:', error);
-                    window.location.href = 'login.php'; // Redirect in case of error
                 });
         });
     </script>
