--- a/help.html
+++ b/help.html
@@ -28,7 +28,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="account.html" style="color: white; font-size: 30px;" id="usernameLink">User</a></li>
+                        <li><a href="account.html" style="color: white; font-size: 30px;" id="usernameLink">User</a>
+                        </li>
                         <li><a href='account.html'><i class="material-icons"
                                     style="color: white; font-size: 60px;">account_circle</i></a></li>
                     </ul>
@@ -113,13 +114,13 @@
                 .then(data => {
                     if (data.error) {
                         console.error(data.error);
+                        window.location.href = 'login.php'; // Redirect in case of error
                     } else {
                         document.getElementById('usernameLink').textContent = data.username;
                     }
                 })
                 .catch(error => {
                     console.error('Error fetching login status:', error);
-                    window.location.href = 'login.php'; // Redirect in case of error
                 });
         });
     </script>
