--- a/maccount.html
+++ b/maccount.html
@@ -28,7 +28,7 @@
                 </div>
                 <nav id="nav2">
                     <ul>
-                        <li><a href="maccount.html">User</a></li>
+                        <li><a href="maccount.html" id="usernameLink">User</a></li>
                         <li><a href='maccount.html'><i class="material-icons" id="material-icons">account_circle</i></a>
                         </li>
                     </ul>
@@ -41,31 +41,31 @@
                             Akun
                         </div>
                         <div class="account-main-body-panel-right-inside-panel">
-                            <div class="account-main-body-panel-right-text-black-big">
+                            <div class="account-main-body-panel-right-text-black-big" id="usernameTitle">
                                 User
                             </div>
                             <div class="account-main-body-panel-right-box">
                                 <div class="account-main-body-panel-right-box-text-gray">
                                     Nomor Ponsel
                                 </div>
-                                <div class="account-main-body-panel-right-box-text-black">
-                                    12345678
+                                <div class="account-main-body-panel-right-box-text-black" id="phoneNumber">
+                                    <!-- Phone Number will be displayed here -->
                                 </div>
                             </div>
                             <div class="account-main-body-panel-right-box">
                                 <div class="account-main-body-panel-right-box-text-gray">
                                     Email
                                 </div>
-                                <div class="account-main-body-panel-right-box-text-black">
-                                    user@gmail.com
+                                <div class="account-main-body-panel-right-box-text-black" id="email">
+                                    <!-- Email will be displayed here -->
                                 </div>
                             </div>
                             <div class="account-main-body-panel-right-box">
                                 <div class="account-main-body-panel-right-box-text-gray">
                                     Password
                                 </div>
-                                <div class="account-main-body-panel-right-box-text-black">
-                                    *******
+                                <div class="account-main-body-panel-right-box-text-black" id="password">
+                                    <!-- Password will be displayed here -->
                                 </div>
                             </div>
                         </div>
@@ -123,6 +123,27 @@
             // redirect to pc account page
             window.location.href = "account.html";
         }
+
+        // Fetch user information
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('public/php/get_user_info.php')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        console.error(data.error);
+                        window.location.href = 'login.php'; // Redirect in case of error
+                    } else {
+                        document.getElementById('usernameLink').textContent = data.username;
+                        document.getElementById('usernameTitle').textContent = data.username;
+                        document.getElementById('phoneNumber').textContent = data.phone_number;
+                        document.getElementById('email').textContent = data.email;
+                        document.getElementById('password').textContent = '*'.repeat(8);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching login status:', error);
+                });
+        });
     </script>
 </body>
 
