--- a/msettings.html
+++ b/msettings.html
@@ -28,7 +28,7 @@
                 </div>
                 <nav id="nav2">
                     <ul>
-                        <li><a href="maccount.html">User</a></li>
+                        <li><a href="maccount.html" id="usernameLink">User</a></li>
                         <li><a href='maccount.html'><i class="material-icons"
                                     id="material-icons">account_circle</i></a></li>
                     </ul>
@@ -110,6 +110,23 @@
             // redirect to pc account page
             window.location.href = "settings.html";
         }
+
+        // Fetch user information
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('public/php/get_user_info.php')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.error) {
+                        console.error(data.error);
+                        window.location.href = 'login.php'; // Redirect in case of error
+                    } else {
+                        document.getElementById('usernameLink').textContent = data.username;
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching login status:', error);
+                });
+        });
     </script>
 </body>
 
