--- a/orders.html
+++ b/orders.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +12,6 @@
     <base href="https://localhost/github/leggo/">
     <title>Leggo</title>
 </head>
-
 <body style="overflow-x: hidden;">
     <div class="bg-purpleRadiant">
         <div class="bg-img-account">
@@ -44,43 +42,27 @@
                             <button class="account-main-body-panel-left-button" onclick="navigateTo('account.html')">
                                 Akun
                             </button>
-
                             <button class="account-main-body-panel-left-button" onclick="navigateTo('payment.html')">
                                 Pembayaran
                             </button>
-
-                            <button class="account-main-body-panel-left-button-current"
-                                onclick="navigateTo('orders.html')">
+                            <button class="account-main-body-panel-left-button-current" onclick="navigateTo('orders.html')">
                                 Pesanan
                             </button>
-
                             <button class="account-main-body-panel-left-button" onclick="navigateTo('help.html')">
                                 Pusat Bantuan
                             </button>
-
                             <button class="account-main-body-panel-left-button" onclick="navigateTo('settings.html')">
                                 Pengaturan
                             </button>
                         </div>
                     </div>
-
                     <div class="account-main-body-panel-right">
                         <div class="account-main-body-panel-right-text-current">
                             Pesanan Anda
                         </div>
                         <div class="account-main-body-panel-right-inside-panel">
-                            <div class="orders-main-body-panel-right-inside-panel-col">
-                                <div class="orders-main-body-panel-right-inside-panel-img">
-                                    <img src="public/Resources/NoOrders.png">
-                                </div>
-                                <div class="orders-main-body-panel-right-inside-panel-box">
-                                    <div class="orders-main-body-panel-right-inside-panel-box-header-text">
-                                        Belum ada pesanan
-                                    </div>
-                                    <div class="orders-main-body-panel-right-inside-panel-box-text">
-                                        Semua pesanan yang dilakukan akan ditampilkan disini termasuk e-tiket milikmu.
-                                    </div>
-                                </div>
+                            <div class="orders-main-body-panel-right-inside-panel-col" id="ordersContainer">
+                                <!-- Order cards will be inserted here -->
                             </div>
                         </div>
                     </div>
@@ -88,21 +70,62 @@
             </div>
         </div>
     </div>
-
     <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('public/php/fetch_orders.php')
+                .then(response => response.json())
+                .then(orders => {
+                    const ordersContainer = document.getElementById('ordersContainer');
+                    if (orders.error) {
+                        console.error(orders.error);
+                        window.location.href = 'login.php'; // Redirect if not logged in
+                    } else if (orders.length === 0) {
+                        ordersContainer.classList.add('no-orders');
+                        ordersContainer.innerHTML = `
+                            <div class="orders-main-body-panel-right-inside-panel-img">
+                                <img src="public/Resources/NoOrders.png">
+                            </div>
+                            <div class="orders-main-body-panel-right-inside-panel-box">
+                                <div class="orders-main-body-panel-right-inside-panel-box-header-text">
+                                    Belum ada pesanan
+                                </div>
+                                <div class="orders-main-body-panel-right-inside-panel-box-text">
+                                    Semua pesanan yang dilakukan akan ditampilkan disini termasuk e-tiket milikmu.
+                                </div>
+                            </div>`;
+                    } else {
+                        orders.forEach(order => {
+                            const orderCard = document.createElement('div');
+                            orderCard.classList.add('order-card');
+                            orderCard.innerHTML = `
+                                <div class="order-card-header">Order ID: ${order.id_pemesanan}</div>
+                                <div class="order-card-body">
+                                    <p><strong>Nama Lengkap:</strong> ${order.nama_lengkap}</p>
+                                    <p><strong>Nomor Telepon:</strong> ${order.nomor_telepon}</p>
+                                    <p><strong>Email:</strong> ${order.email}</p>
+                                    <p><strong>Jumlah Penumpang:</strong> ${order.jumlah_penumpang}</p>
+                                    <p><strong>Total Bayar:</strong> ${order.total_bayar}</p>
+                                    <p><strong>Status Pembayaran:</strong> ${order.status_pembayaran}</p>
+                                    <p><strong>Selected Bagasi:</strong> ${order.selected_bagasi}</p>
+                                </div>`;
+                            ordersContainer.appendChild(orderCard);
+                        });
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching orders:', error);
+                });
+        });
+
         const mediaQuery = window.matchMedia("(max-width: 1020px)");
 
-        // listen for changes to the media query
         mediaQuery.addListener((event) => {
             if (event.matches) {
-                // redirect to mobile account page
                 window.location.href = "morders.html";
             }
         });
 
-        // check the initial state of the media query
         if (mediaQuery.matches) {
-            // redirect to mobile account page
             window.location.href = "morders.html";
         }
 
@@ -110,23 +133,19 @@
             window.location.href = url;
         }
 
-        // Fetch user information
-        document.addEventListener('DOMContentLoaded', () => {
-            fetch('public/php/get_user_info.php')
-                .then(response => response.json())
-                .then(data => {
-                    if (data.error) {
-                        console.error(data.error);
-                        window.location.href = 'login.php'; // Redirect in case of error
-                    } else {
-                        document.getElementById('usernameLink').textContent = data.username;
-                    }
-                })
-                .catch(error => {
-                    console.error('Error fetching login status:', error);
-                });
-        });
+        fetch('public/php/get_user_info.php')
+            .then(response => response.json())
+            .then(data => {
+                if (data.error) {
+                    console.error(data.error);
+                    window.location.href = 'login.php';
+                } else {
+                    document.getElementById('usernameLink').textContent = data.username;
+                }
+            })
+            .catch(error => {
+                console.error('Error fetching login status:', error);
+            });
     </script>
 </body>
-
 </html>
