--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <!-- Dropdown content will be populated here -->
                     </div>
                 </li>
-                <li><a id="accountLink"><i class="material-icons">account_circle</i></a></li>
+                <li><a id="accountLink" href="account.html"><i class="material-icons">account_circle</i></a></li>
             </ul>
         </nav>
     </div>
